--- a/Reso/Reso/Base.lproj/Main.storyboard
+++ b/Reso/Reso/Base.lproj/Main.storyboard
@@ -5,6 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--CreatePoll-->
+        <scene sceneID="5G3-4K-hff">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CreatePoll" id="fnD-mL-WMG" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vbR-FZ-wzp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="385.5" y="126"/>
+        </scene>
         <!--Table View Controller-->
         <scene sceneID="aKc-PO-GxX">
             <objects>
@@ -15,12 +23,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ohr-ZH-3eY">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ohr-ZH-3eY" id="Lrj-Pr-cN0">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="5eg-ux-XjQ" kind="show" identifier="toPollDetail" id="W9X-Qs-AC6"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -28,10 +39,49 @@
                             <outlet property="delegate" destination="ci6-oH-84L" id="ZxC-wF-E1C"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="TTP-I6-bVn"/>
+                    <connections>
+                        <segue destination="fnD-mL-WMG" kind="presentation" identifier="toCreatePoll" id="Q5M-Pd-Dr0"/>
+                        <segue destination="ghK-wA-seZ" kind="presentation" identifier="toLogin" id="iuE-uK-NcJ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ReJ-I2-5fu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301" y="577"/>
+            <point key="canvasLocation" x="385" y="577"/>
+        </scene>
+        <!--Login-->
+        <scene sceneID="ETS-pq-s68">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" id="ghK-wA-seZ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p8V-D5-c5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="385.5" y="978"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="FSc-j9-bFA">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Detail" id="5eg-ux-XjQ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nPC-Pb-EhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="841" y="577"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="KoK-YM-VZa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cLV-LG-vCf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RMg-IR-KEA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ci6-oH-84L" kind="relationship" relationship="rootViewController" id="rCF-Qh-Fp9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zqg-Ik-2V3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-295" y="577"/>
         </scene>
     </scenes>
 </document>
