--- a/Reso/Reso/Detail.storyboard
+++ b/Reso/Reso/Detail.storyboard
@@ -59,11 +59,11 @@
                                                 <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bSe-xC-faS" id="Cc2-Nv-LiU">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XTW-Ns-0vz" userLabel="userPhotoImageView">
-                                                            <rect key="frame" x="8" y="9.5" width="40" height="40"/>
+                                                            <rect key="frame" x="8" y="10" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="40" id="hxB-48-SgM"/>
                                                                 <constraint firstAttribute="height" constant="40" id="meT-ub-16Q"/>
@@ -147,7 +147,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="3Yc-C0-3CD" secondAttribute="trailing" id="4Pv-Vq-cfD"/>
                             <constraint firstItem="o7t-w1-Wqa" firstAttribute="top" secondItem="3Yc-C0-3CD" secondAttribute="bottom" id="8Qe-Hz-RK0"/>
@@ -171,11 +171,14 @@
                         <viewControllerLayoutGuide type="top" id="3YH-jc-JN6"/>
                         <viewControllerLayoutGuide type="bottom" id="4ES-Tb-Pm7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Seb-zY-Rsx">
+                    <view key="view" contentMode="scaleToFill" id="Seb-zY-Rsx" customClass="PieChartView" customModule="Charts">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="pieChartView" destination="Seb-zY-Rsx" id="SNE-tX-3Lg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AXi-MJ-sKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
