--- a/Reso/Reso/Base.lproj/Main.storyboard
+++ b/Reso/Reso/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1U7-RC-0N4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3US-xB-3bB">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -16,10 +16,10 @@
             </objects>
             <point key="canvasLocation" x="1541.5" y="-81"/>
         </scene>
-        <!--Main Menu View Controller-->
+        <!--Poll List View Controller-->
         <scene sceneID="IPW-Nc-rzG">
             <objects>
-                <viewController id="1U7-RC-0N4" customClass="MainMenuViewController" customModule="Reso" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1U7-RC-0N4" customClass="PollListViewController" customModule="Reso" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="K0P-jR-piz"/>
                         <viewControllerLayoutGuide type="bottom" id="kUQ-ls-sgQ"/>
@@ -129,7 +129,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="63" id="0ZP-Nm-jbx" customClass="MainMenuTableViewCell" customModule="Reso" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="63" id="0ZP-Nm-jbx" customClass="PollTableViewCell" customModule="Reso" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="28" width="600" height="63"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0ZP-Nm-jbx" id="VmU-EP-qVS">
@@ -256,8 +256,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="lpq-Lo-yTE"/>
                     <connections>
-                        <outlet property="mainMenuTableView" destination="6Qx-Va-vDR" id="I2V-bz-Yev"/>
                         <outlet property="privatePublicSegmentedControl" destination="YRn-pX-5Yq" id="9YK-yQ-1p1"/>
+                        <outlet property="tableView" destination="6Qx-Va-vDR" id="gWk-o9-hYz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cDl-Xa-TFk" userLabel="First Responder" sceneMemberID="firstResponder"/>
